# cli-csv-to-excel

./: .gitignore  README.md  build_messages.py  pyproject.toml  setup_linux.sh  setup_windows.bat
.github/workflows/: publish.yml
src/csv_to_excel/: cli.py  converter.py  i18n.py
src/csv_to_excel/locale/ru/: messages_argparse.po  messages_custom.po
src/csv_to_excel/locale/ru/LC_MESSAGES/: messages.mo
